[gd_scene load_steps=3 format=3 uid="uid://c3f2w1c0fje6e"]

[ext_resource type="Script" uid="uid://6f0r884paeuu" path="res://Scenes/TelaPrincipal.gd" id="1_6i7ux"]
[ext_resource type="Texture2D" uid="uid://7mgyat02kink" path="res://Assets/Screen/Fundo_Home.png" id="2_scl28"]

[node name="TelaPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 1.0
offset_right = 2.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6i7ux")

[node name="GaragemButton" type="Button" parent="."]
layout_mode = 2
offset_right = 40.0
offset_bottom = 8.0

[node name="ConfiguracaoButton" type="Button" parent="."]
layout_mode = 2
offset_top = 12.0
offset_right = 40.0
offset_bottom = 20.0

[node name="LojaButton" type="Button" parent="."]
layout_mode = 2
offset_top = 24.0
offset_right = 40.0
offset_bottom = 32.0

[node name="CorrerButton" type="Button" parent="."]
layout_mode = 2
offset_top = 36.0
offset_right = 40.0
offset_bottom = 44.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Fundo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.31
anchor_bottom = 0.618
offset_right = 793.88
offset_bottom = 243.536

[node name="FundoHome" type="Sprite2D" parent="."]
position = Vector2(574, 321)
scale = Vector2(0.149149, 0.150505)
texture = ExtResource("2_scl28")

[node name="ContainerCar" type="CenterContainer" parent="."]
layout_mode = 0
offset_left = 574.0
offset_top = 509.0
offset_right = 574.0
offset_bottom = 509.0

[node name="ContainerCharacter" type="CenterContainer" parent="."]
layout_mode = 0
offset_left = 760.0
offset_top = 500.0
offset_right = 800.0
offset_bottom = 540.0
